# eat-music-cli

./: README.md  install.sh
source/: pyproject.toml
source/eatmusic/: eat.py  meta.py
